panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__nullptr__test_assignment_to_nullptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/nullptr/test_assignment_to_nullptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_assignment_to_nullptr.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `nullptr_t` (nullptr `nullptr_t`))
         (definition b~3 `nullptr_t` (noop-type-conversion `nullptr_t` (nullptr `nullptr_t`)))
         (expression (assign `nullptr_t` (a~2 `nullptr_t`) (nullptr `nullptr_t`)))
         (expression (assign `nullptr_t` (b~3 `nullptr_t`) (noop-type-conversion `nullptr_t` (nullptr `nullptr_t`))))
         (expression (assign `nullptr_t` (a~2 `nullptr_t`) (b~3 `nullptr_t`)))
         (expression (assign `nullptr_t` (b~3 `nullptr_t`) (noop-type-conversion `nullptr_t` (a~2 `nullptr_t`))))
         (expression (assign `nullptr_t` (a~2 `nullptr_t`) (sign-extend `nullptr_t` (0 `int`))))
         (expression (assign `nullptr_t` (a~2 `nullptr_t`) (sign-extend `nullptr_t` (multiply `int` (2 `int`) (0 `int`)))))
         (expression (assign `nullptr_t` (a~2 `nullptr_t`) (noop-type-conversion `nullptr_t` (sign-extend `ptr<void>` (0 `int`)))))
         (expression (assign `nullptr_t` (b~3 `nullptr_t`) (sign-extend `nullptr_t` (0 `int`))))
         (expression (assign `nullptr_t` (b~3 `nullptr_t`) (sign-extend `nullptr_t` (multiply `int` (2 `int`) (0 `int`)))))
         (expression (assign `nullptr_t` (b~3 `nullptr_t`) (noop-type-conversion `nullptr_t` (sign-extend `ptr<void>` (0 `int`))))))))

----- stderr -----
