panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__nullptr__test_nullptr_comparison.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/nullptr/test_nullptr_comparison.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_nullptr_comparison.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition x~3 `int` (42 `int`))
         (definition p~4 `ptr<int>`
            (addressof `ptr<int>`
               (x~3 `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-equal `int` (p~4 `ptr<int>`) (nullptr `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-not-equal `int` (p~4 `ptr<int>`) (nullptr `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-equal `int` (nullptr `nullptr_t`) (nullptr `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-not-equal `int` (nullptr `nullptr_t`) (nullptr `nullptr_t`))))
         (definition null~5 `ptr<array<long; 10>>` (noop-type-conversion `ptr<array<long; 10>>` (nullptr `nullptr_t`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-equal `int` (null~5 `ptr<array<long; 10>>`) (nullptr `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-not-equal `int` (null~5 `ptr<array<long; 10>>`) (nullptr `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 13>>`
                        (string `array<char; 13>` "%d %d %d %d\n\0"))))
               (ptr-not-equal `int` (p~4 `ptr<int>`) (sign-extend `nullptr_t` (0 `int`)))
               (ptr-equal `int` (noop-type-conversion `nullptr_t` (0ll `long long`)) (p~4 `ptr<int>`))
               (ptr-not-equal `int` (noop-type-conversion `nullptr_t` (zero-extend `ptr<void>` (0u `unsigned int`))) (p~4 `ptr<int>`))
               (ptr-equal `int` (p~4 `ptr<int>`) (noop-type-conversion `nullptr_t` (noop-type-conversion `ptr<void>` (0ul `unsigned long`))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 13>>`
                        (string `array<char; 13>` "%d %d %d %d\n\0"))))
               (ptr-not-equal `int` (null~5 `ptr<array<long; 10>>`) (sign-extend `nullptr_t` (0 `int`)))
               (ptr-equal `int` (noop-type-conversion `nullptr_t` (0ll `long long`)) (null~5 `ptr<array<long; 10>>`))
               (ptr-not-equal `int` (noop-type-conversion `nullptr_t` (sign-extend `ptr<void>` (0 `int`))) (null~5 `ptr<array<long; 10>>`))
               (ptr-equal `int` (null~5 `ptr<array<long; 10>>`) (noop-type-conversion `nullptr_t` (noop-type-conversion `ptr<void>` (0ul `unsigned long`))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 13>>`
                        (string `array<char; 13>` "%d %d %d %d\n\0"))))
               (ptr-equal `int` (noop-type-conversion `nullptr_t` (0l `long`)) (nullptr `nullptr_t`))
               (ptr-not-equal `int` (noop-type-conversion `nullptr_t` (negate `long` (0l `long`))) (nullptr `nullptr_t`))
               (ptr-not-equal `int` (nullptr `nullptr_t`) (noop-type-conversion `nullptr_t` (add `unsigned long` (0xffff'ffff'ffff'ffff `unsigned long`) (sign-extend `unsigned long` (1 `int`)))))
               (ptr-equal `int` (nullptr `nullptr_t`) (sign-extend `nullptr_t` (subtract `int` (1 `int`) (1 `int`))))))
         (definition runtime_nullptr~6 `nullptr_t` (nullptr `nullptr_t`))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (ptr-equal `int` (p~4 `ptr<int>`) (runtime_nullptr~6 `nullptr_t`))
               (ptr-equal `int` (runtime_nullptr~6 `nullptr_t`) (p~4 `ptr<int>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (ptr-not-equal `int` (p~4 `ptr<int>`) (runtime_nullptr~6 `nullptr_t`))
               (ptr-not-equal `int` (runtime_nullptr~6 `nullptr_t`) (p~4 `ptr<int>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-equal `int` (runtime_nullptr~6 `nullptr_t`) (runtime_nullptr~6 `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-not-equal `int` (runtime_nullptr~6 `nullptr_t`) (runtime_nullptr~6 `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-equal `int` (null~5 `ptr<array<long; 10>>`) (runtime_nullptr~6 `nullptr_t`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-not-equal `int` (null~5 `ptr<array<long; 10>>`) (runtime_nullptr~6 `nullptr_t`)))))))

----- stderr -----
