panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__nullptr__test_nullptr_to_bool_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/nullptr/test_nullptr_to_bool_conversion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_nullptr_to_bool_conversion.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (zero-extend `int` (bool-cast `bool` (nullptr `nullptr_t`)))))
         (definition b~3 `bool` (bool-cast `bool` (nullptr `nullptr_t`)))
         (return (zero-extend `int` (b~3 `bool`))))))

----- stderr -----
