panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__nullptr__test_return_nullptr_from_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/nullptr/test_return_nullptr_from_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_return_nullptr_from_function.c"
   (function-definition external
      f~0 `fn() -> nullptr_t`
      (compound-statement
         (return (nullptr `nullptr_t`))))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (definition null~4 `ptr<int>`
            (noop-type-conversion `ptr<int>`
               (call `nullptr_t`
                  (addressof `ptr<fn() -> nullptr_t>`
                     (f~0 `fn() -> nullptr_t`)))))
         (return
            (logical-and `int`
               (ptr-equal `int`
                  (call `nullptr_t`
                     (addressof `ptr<fn() -> nullptr_t>`
                        (f~0 `fn() -> nullptr_t`)))
                  (nullptr `nullptr_t`))
               (not `int` (null~4 `ptr<int>`)))))))

----- stderr -----
